Add button to send message and basic styles
Introduced a button that calls sendmessage('Hello World!') on click, added a simple table style, and included a sendmessage function using postMessage. Also added basic HTML head elements.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head>
+    <meta charset="utf-8" />
+    <title></title>
+
+    <style>
+        .table_style {
+            width: 100%;
+            margin: 0 auto;
+        }
+    </style>
+
+    <script>
+        function sendmessage(message) {
+            postMessage(message);
+        }
+    </script>
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <button onclick="sendmessage('Hello World!')"/>
 </body>
 </html>
