change post message to alert

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
     <script>
         function sendmessage(message) {
-            postMessage(message);
+            alert(message);
         }
     </script>
 </head>
