--- a/index.html
+++ b/index.html
@@ -11,57 +11,56 @@
     </style>
 </head>
 <body style="position: relative">
+    <select name="mapselection" id="mapselection"  onchange="handleMapChange(this.value)">
+        <option value="albasrah">albasrah</option>
+        <option value="anvil">anvil</option>
+    </select>
 
-    <button onclick="showPopup('7519599838007151928')" style="transform:rotate(-32deg); position:relative">Show Image</button>
 
-    <div id="maps">
+    <div id="maps" name="maps">
+
+
         <div id="albasrah" style="position: relative;">
             <img src="https://raw.githubusercontent.com/Sarty1234/Sarty1234.github.io/refs/heads/main/maps/albasrah/basemap.webp" style="position:relative;" alt="albasrah" />
             <div id="albasrahspots">
-                <a href="https://www.tiktok.com/@duty_petro/video/7481004411293093175" target="_blank" style="transform: rotate(0deg); width: 25px; height: 15px; background-color: green; position: absolute; left: 2469px; top: 2992px;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481004411293093175" target="_blank" style="transform: rotate(0deg); width: 25px; height: 15px; left: 2469px; top: 2992px; background-color: yellow; position: absolute;"></a>
             </div>
         </div>
-    </div>
 
-    <!-- Pop Up with tiktok video -->
-    <div id="popup" style="display:none; position:absolute; left: 100px; top: 100px;">
-        <div id="popupContent">
-            <span class="closeBtn" onclick="hidePopup()">×</span>
 
-            <div id="VideoBox">
-                <blockquote class="tiktok-embed" data-video-id="7482054360462118150" data-embed-from="oembed" style="max-width:605px; min-width:325px;"> <section></section> </blockquote>
-                <script async onerror="var a=document.createElement('script');a.src='https://iframely.net/files/tiktok-embed.js';document.body.appendChild(a);" src="https://www.tiktok.com/embed.js"></script>
+        <div id="anvil" style="position: relative;">
+            <img src="https://raw.githubusercontent.com/Sarty1234/Sarty1234.github.io/refs/heads/main/maps/anvil/basemap.webp" style="position:relative;" alt="albasrah" />
+            <div id="anvilspots">
+                <!-- Round -->
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(-6deg); width: 25px; height: 30px; left: 670px; top: 723px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(-6deg); width: 28px; height: 20px; left: 582px; top: 842px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(-6deg); width: 20px; height: 28px; left: 679px; top: 919px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(0deg); width: 20px; height: 26px; left: 784px; top: 1016px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(0deg); width: 30px; height: 22px; left: 438px; top: 1081px; background-color: green; position: absolute;"></a>
+
+                <!-- Flat with dog house on top -->
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(-6deg); width: 25px; height: 30px; left: 616px; top: 690px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(0deg); width: 30px; height: 22px; left: 440px; top: 1140px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(0deg); width: 24px; height: 32px; left: 550px; top: 1084px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(0deg); width: 24px; height: 32px; left: 520px; top: 1224px; background-color: green; position: absolute;"></a>
+
+                <!-- Tower Window-->
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(-6deg); width: 24px; height: 16px; left: 572px; top: 876px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(0deg); width: 16px; height: 26px; left: 814px; top: 1028px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(0deg); width: 26px; height: 14px; left: 450px; top: 1054px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(0deg); width: 26px; height: 14px; left: 396px; top: 1154px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(90deg); width: 26px; height: 14px; left: 572px; top: 1234px; background-color: green; position: absolute;"></a>
+
+                <!-- Crown -->
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(-6deg); width: 20px; height: 20px; left: 656px; top: 936px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(0deg); width: 32px; height: 24px; left: 402px; top: 1050px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(90deg); width: 32px; height: 22px; left: 590px; top: 1190px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(90deg); width: 26px; height: 18px; left: 626px; top: 1180px; background-color: green; position: absolute;"></a>
             </div>
         </div>
+
+
     </div>
 
-    <script>
-        function showPopup(videoId) {
-            loadTikTok(videoId);
-            document.getElementById("popup").style.display = "flex";
-        }
-
-        function hidePopup() {
-            document.getElementById("popup").style.display = "none";
-        }
-
-
-        function loadTikTok(videoId) {
-            const container = document.getElementById("VideoBox");
-
-            // Clear previous content
-            container.innerHTML = `
-                <blockquote class="tiktok-embed" data-video-id="${videoId}" style="max-width: 605px; min-width: 325px;">
-                  <section></section>
-                </blockquote>
-              `;
-
-            // Force re-execution of the TikTok embed script
-            const script = document.createElement("script");
-            script.src = "https://www.tiktok.com/embed.js";
-            script.async = true;
-            document.body.appendChild(script);
-        }
-    </script>
 </body>
 </html>
