finished left part of anvil

--- a/index.html
+++ b/index.html
@@ -37,12 +37,21 @@
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(-6deg); width: 20px; height: 28px; left: 679px; top: 919px; background-color: green; position: absolute;"></a>
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(0deg); width: 20px; height: 26px; left: 784px; top: 1016px; background-color: green; position: absolute;"></a>
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(0deg); width: 30px; height: 22px; left: 438px; top: 1081px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(90deg); width: 30px; height: 22px; left: 652px; top: 1174px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(-35deg); width: 30px; height: 22px; left: 288px; top: 1471px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(90deg); width: 30px; height: 22px; left: 476px; top: 1571px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(110deg); width: 30px; height: 22px; left: 596px; top: 1790px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640606666640646" target="_blank" style="transform: rotate(0deg); width: 30px; height: 22px; left: 534px; top: 3386px; background-color: green; position: absolute;"></a>
 
                 <!-- Flat with dog house on top -->
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(-6deg); width: 25px; height: 30px; left: 616px; top: 690px; background-color: green; position: absolute;"></a>
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(0deg); width: 30px; height: 22px; left: 440px; top: 1140px; background-color: green; position: absolute;"></a>
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(0deg); width: 24px; height: 32px; left: 550px; top: 1084px; background-color: green; position: absolute;"></a>
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(0deg); width: 24px; height: 32px; left: 520px; top: 1224px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(90deg); width: 24px; height: 32px; left: 297px; top: 1522px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(90deg); width: 24px; height: 32px; left: 352px; top: 1546px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(0deg); width: 24px; height: 32px; left: 542px; top: 3326px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640543416585527" target="_blank" style="transform: rotate(0deg); width: 24px; height: 32px; left: 600px; top: 3386px; background-color: green; position: absolute;"></a>
 
                 <!-- Tower Window-->
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(-6deg); width: 24px; height: 16px; left: 572px; top: 876px; background-color: green; position: absolute;"></a>
@@ -50,12 +59,19 @@
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(0deg); width: 26px; height: 14px; left: 450px; top: 1054px; background-color: green; position: absolute;"></a>
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(0deg); width: 26px; height: 14px; left: 396px; top: 1154px; background-color: green; position: absolute;"></a>
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(90deg); width: 26px; height: 14px; left: 572px; top: 1234px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(-35deg); width: 26px; height: 14px; left: 278px; top: 1448px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(110deg); width: 26px; height: 14px; left: 623px; top: 1815px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640501377010949" target="_blank" style="transform: rotate(90deg); width: 26px; height: 14px; left: 604px; top: 3346px; background-color: green; position: absolute;"></a>
 
                 <!-- Crown -->
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(-6deg); width: 20px; height: 20px; left: 656px; top: 936px; background-color: green; position: absolute;"></a>
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(0deg); width: 32px; height: 24px; left: 402px; top: 1050px; background-color: green; position: absolute;"></a>
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(90deg); width: 32px; height: 22px; left: 590px; top: 1190px; background-color: green; position: absolute;"></a>
                 <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(90deg); width: 26px; height: 18px; left: 626px; top: 1180px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(-35deg); width: 26px; height: 18px; left: 249px; top: 1464px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(0deg); width: 26px; height: 18px; left: 444px; top: 1520px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(0deg); width: 26px; height: 18px; left: 586px; top: 3346px; background-color: green; position: absolute;"></a>
+                <a href="https://www.tiktok.com/@duty_petro/video/7481640565872839942" target="_blank" style="transform: rotate(90deg); width: 26px; height: 18px; left: 586px; top: 3476px; background-color: green; position: absolute;"></a>
             </div>
         </div>
 
